2002-03-02  Stefan Jahn  <stefan@lkcc.org>

	* convert.i.c: Fixed int <-> long conversions which would have
	failed if their sizes were different.

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Cleaned up the handling of 'if', 'let',
	'letrec' and 'set*': Removed some uses of t.arg1, t.lloc and proc
	as temporary variables.  Removed side-effecting operations from
	conditions and macro calls.  Introduced temporary variables with
	hopefully descriptive names for clarification.  Replaced SCM_N?IMP
	by a more explicit predicate in some places.  Removed code that
	was conditionally compiled if SICP was defined - which it never
	is.

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Cleaned up the handling of 'cons' and 'do':
	Removed some uses of t.arg1 and proc as temporary variables.
	Removed side-effecting operations from conditions and macro calls.
	Introduced temporary variables with hopefully descriptive names
	for clarification.  Replaced SCM_N?IMP by a more explicit
	predicate in some places.

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (scm_badargsp, SCM_CEVAL): Replaced SCM_N?IMP by a more
	explicit predicate in some places.

	(CHECK_EQVISH): Removed.

	(SCM_CEVAL): Removed some uses of t.arg1 and proc as temporary
	variables.  Removed side-effecting operations from conditions and
	macro calls.  Introduced temporary variables for clarification.
	Sorted if-else-if check for the type of the last form in a list by
	frequency.  Avoided some unnecessary tail-recursion calls.

2002-03-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (SCM_HEAP_SEG_SIZE, CELL_UP, CELL_DN, NEXT_DATA_CELL,
	init_heap_seg, alloc_some_heap), gc.h (struct scm_cell, struct
	scm_t_cell, SCM_CELLPTR, SCM_GC_CARD_SIZE,
	SCM_GC_IN_CARD_HEADERP), tags.h (SCM_CELLP):  Renamed the struct
	scm_cell and all its uses to scm_t_cell in accordance to Guile's
	naming scheme for types.

	* alist.c (scm_acons), convert.i.c (CTYPES2UVECT,